# prompt-playground

./: README.md  docker-compose.dev.yaml  docker-compose.yaml
client/: Dockerfile  package-lock.json  package.json
client/public/: index.html
client/src/: App.tsx  api.ts
client/src/components/chat/: ChatArea.tsx  Message.tsx  MessageField.tsx  MessageList.tsx
client/src/components/sidebar/: ChatButton.tsx  ChatList.tsx  NewChatButton.tsx  Sidebar.tsx  SidebarToggleButton.tsx
client/src/context/: ChatContext.tsx  UIContext.tsx
client/src/layouts/: AppLayout.tsx  ErrorBanner.tsx
client/src/model/: AppError.ts  ChatModel.ts  MessageModel.ts
server/: Dockerfile  pyproject.toml
server/server/: api.py  crud.py  db.py  main.py  messanger.py  models.py  openai_messenger.py  schemas.py  websocket_manager.py
